Add index.html and css stylesheet for directory 1 challenge

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
   </head>
   <body>
 
+<header>
+  <h2>5280 Landmarks</h2>
+</header>
+
+<nav>
+  <a href="#">Building</a>
+  <a href="#">Art</a>
+  <a href="#">Featured</a>
+</nav>
+
+<section>
+  <img src="images/1.jpg" alt="Denver Art Museum" width="1000 height="700">
+</section>
+
+<article>
+  <h1>Denver Art Museum</h1>
+  <p>Lorem ipsum dolor sit amet, diam essent ne sed, ullamcorper complectitur et sit. Eleifend gubergren in eos. Tibique legendos salutatus nam an, eu tempor vidisse similique eum. Consul adipisci voluptatibus sed id, in vis dictas meliore verterem. Et mei wisi vidisse voluptatum.</p>
+
+  <p>In duo quod veri aliquam. Natum ancillae dissentiet ad mea, ex ignota appetere eam. At nulla equidem quo. Solet vitae expetenda in vel, his et enim verear, ad eos posse meliore. Ad ignota numquam maluisset sed, sit assentior ullamcorper in.</p>
+
+  <p>Discere epicurei ea vel. Vis ea diam alterum adipiscing. Ei elit elitr vel, est alia albucius voluptatum an. Ea has illud nullam concludaturque. Vel insolens percipitur eu, per ad laudem viderer scriptorem, id nam omnes vocent epicurei. Wisi aeque te usu. Ex fugit graeci pro, et ius iudico ignota lucilius, at usu nibh recteque forensibus.</p>
+
+  <p>Et sumo aliquam atomorum vim, ex tritani tamquam denique eam. No duo rebum causae, vis sonet possim cu. Te pri idque omnes. Utamur corrumpit theophrastus eam no. Eu nec reque volutpat, vix mucius dictas quaerendum ei, in alii unum assueverit eos.</p>
+</article>
+
+
+<footer>
+  <p>Usu vocibus mandamus volutpat no, cu quo dolorem pertinax. Vix vero falli menandri et, mea ne illud bonorum, idque iriure laoreet per no. At pro nemore postulant explicari, qui at assum nihil aliquando, nihil oblique discere ne vim. In vim solum putent. Eros viderer an qui, ad eum alia tempor detraxit. Ne cum iisque definiebas disputationi, cum audiam inermis cu. Consulatu hendrerit pro no.</p>
+</footer>
+
   </body>
 </html>
 
